--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": "Derek Lieu <dl@dereklieu.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "webpack": "^3.8.1"
   },
