--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "repository": "git@github.com:dereklieu/formation.git",
   "author": "Derek Lieu <dl@dereklieu.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --config ./app/webpack.config.js --inline false"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "static-site-generator-webpack-plugin": "^3.4.1",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
