--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "author": "Derek Lieu <dl@dereklieu.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config ./app/webpack.config.js --inline false"
+    "start": "webpack-dev-server --config ./webpack.config.js --inline false"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
