--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --inline false",
+    "build": "webpack -p --progress",
     "terraform-init": "cd ./infrastructure/env-dev && terraform init -input=true",
-    "terraform-plan": "cd ./infrastructure/env-dev && terraform get && terraform plan --var-file ./terraform.tfvars"
+    "terraform-plan": "cd ./infrastructure/env-dev && terraform get && terraform plan --var-file ./terraform.tfvars",
+    "terraform-apply": "cd ./infrastructure/env-dev && terraform get && terraform apply --var-file ./terraform.tfvars"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "cross-zip-cli": "^1.0.0",
+    "rimraf": "^2.6.2",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
