--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --inline false",
+    "clean": "rimraf build",
     "build": "webpack -p --progress",
-    "terraform-init": "cd ./infrastructure/env-dev && terraform init -input=true",
-    "terraform-plan": "cd ./infrastructure/env-dev && terraform get && terraform plan --var-file ./terraform.tfvars",
-    "terraform-apply": "cd ./infrastructure/env-dev && terraform get && terraform apply --var-file ./terraform.tfvars"
+    "copy": "mkdirp build && cd lambda && copy ./*.{js,json} ../build && cd ..",
+    "lambda-install": "cd build && npm install --production && cd ..",
+    "zip": "rimraf build/app-package.zip && cross-zip build build/app-package.zip",
+    "terraform-init": "cd ./infrastructure/env-dev && terraform init -input=true && cd ../..",
+    "terraform-plan": "cd ./infrastructure/env-dev && terraform get && terraform plan --var-file ./terraform.tfvars && cd ../..",
+    "terraform-apply": "cd ./infrastructure/env-dev && terraform get && terraform apply --var-file ./terraform.tfvars && cd ../..",
+    "deploy": "npm run clean & npm run build && npm run copy && npm run lambda-install && npm run zip"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "copy": "^0.3.1",
     "cross-zip-cli": "^1.0.0",
+    "mkdirp": "^0.5.1",
     "rimraf": "^2.6.2",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "webpack": "^3.8.1",
