--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "terraform-init": "cd ./infrastructure/env-dev && terraform init -input=true && cd ../..",
     "terraform-plan": "cd ./infrastructure/env-dev && terraform get && terraform plan --var-file ./terraform.tfvars && cd ../..",
     "terraform-apply": "cd ./infrastructure/env-dev && terraform get && terraform apply --var-file ./terraform.tfvars && cd ../..",
-    "deploy": "npm run clean & npm run build && npm run copy && npm run lambda-install && npm run zip"
+    "deploy": "npm run clean & npm run build && npm run copy && npm run lambda-install && npm run zip && npm run terraform-apply"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -25,6 +25,8 @@
     "babel-preset-react": "^6.24.1",
     "copy": "^0.3.1",
     "cross-zip-cli": "^1.0.0",
+    "js-yaml": "^3.10.0",
+    "mime": "^2.0.3",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.6.2",
     "static-site-generator-webpack-plugin": "^3.4.1",
