--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "babel-preset-react": "^6.24.1",
     "copy": "^0.3.1",
     "cross-zip-cli": "^1.0.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
     "js-yaml": "^3.10.0",
     "mime": "^2.0.3",
     "mkdirp": "^0.5.1",
+    "node-sass": "^4.5.3",
     "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.6",
     "static-site-generator-webpack-plugin": "^3.4.1",
+    "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
   },
