Austrian turn photo

--- a/app/assets/registry.yaml
+++ b/app/assets/registry.yaml
@@ -1,3 +1,5 @@
 images:
   - file: alex-jodoin-246078.jpg
     credit: Photo by Alex Jodoin on Unsplash
+  - file: benjamin-voros-246145.jpg
+    credit: Photo by Benjamin Voros on Unsplash
