--- a/app/assets/registry.yaml
+++ b/app/assets/registry.yaml
@@ -3,3 +3,5 @@ images:
     credit: Photo by Alex Jodoin on Unsplash
   - file: benjamin-voros-246145.jpg
     credit: Photo by Benjamin Voros on Unsplash
+  - file: christophe-laurenceau-364504.jpg
+    credit: Photo by Christophe Laurenceau on Unsplash
