--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-zip-cli": "^1.0.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.6",
     "js-yaml": "^3.10.0",
     "mime": "^2.0.3",
     "mkdirp": "^0.5.1",
