Clean up terraform actions and apply backend configuration file

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "copy": "mkdirp build && cd lambda && copy ./*.{js,json} ../build && cd ..",
     "lambda-install": "cd build && yarn --production && cd ..",
     "zip": "cd build && rimraf app-package.zip && cross-zip ./ app-package.zip && cd ..",
-    "terraform-init": "cd ./infrastructure/env-dev && terraform init -input=true && cd ../..",
-    "terraform-plan": "cd ./infrastructure/env-dev && terraform get && terraform plan --var-file ./terraform.tfvars && cd ../..",
-    "terraform-apply": "cd ./infrastructure/env-dev && terraform get && terraform apply --var-file ./terraform.tfvars && cd ../..",
+    "terraform-init": "cd ./infrastructure/env-dev && terraform init -input=true -backend-config=./backend.tfvars",
+    "terraform-plan": "cd ./infrastructure/env-dev && terraform get && terraform plan --var-file ./terraform.tfvars",
+    "terraform-apply": "cd ./infrastructure/env-dev && terraform get && terraform apply --var-file ./terraform.tfvars",
     "prepare-deploy": "yarn clean & yarn build && yarn copy && yarn lambda-install && yarn zip"
   },
   "devDependencies": {
