--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "copy": "^0.3.1",
     "cross-zip-cli": "^1.0.0",
     "css-loader": "^0.28.7",
+    "cypress": "^3.1.4",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.6",
     "js-yaml": "^3.10.0",
