--- a/package.json
+++ b/package.json
@@ -19,25 +19,27 @@
     "prepare-deploy": "yarn clean & yarn build && yarn copy && yarn lambda-install && yarn zip"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@cypress/webpack-preprocessor": "^4.0.3",
     "babel-loader": "^8.0.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "copy": "^0.3.1",
     "cross-zip-cli": "^1.0.0",
     "css-loader": "^0.28.7",
     "cypress": "^3.1.4",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
     "js-yaml": "^3.10.0",
     "mime": "^2.0.3",
+    "mini-css-extract-plugin": "^0.5.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.5.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
-    "static-site-generator-webpack-plugin": "^3.4.1",
+    "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^0.19.0",
     "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
