--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-sass": "^4.5.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^2.0.0",
     "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^0.19.0",
     "webpack": "^4.29.0",
