--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "slugify": "^1.3.4"
   }
 }
