--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Derek Lieu <dl@dereklieu.com>",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint app --ext .js",
     "start": "NODE_ENV=development webpack-dev-server --config ./webpack.config.js --inline false",
     "clean": "rimraf build",
     "build": "NODE_ENV=production webpack -p --progress",
@@ -28,9 +29,15 @@
     "cross-zip-cli": "^1.0.0",
     "css-loader": "^0.28.7",
     "cypress": "^3.1.4",
+    "eslint": "^5.13.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^3.0.1",
     "js-yaml": "^3.10.0",
-    "mime": "^2.0.3",
     "mini-css-extract-plugin": "^0.5.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.5.3",
