--- a/app/assets/greeting.yaml
+++ b/app/assets/greeting.yaml
@@ -2,9 +2,7 @@ greetings:
   - Hello, hi, whatever
   - Hello. Also, not hello
   - It's nothing to meet you
-  - Cool. Cool. Cool. We got this
   - If I had a heart, it would be pounding
   - It's our void now
-  - "[chuckles awkwardly] This is fun"
-  - All my fears are mine again
+  - "[chuckles awkwardly] this is fun"
   - "I've narrowed it down to: yes and no"
