--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint app --ext .js",
-    "start": "NODE_ENV=development webpack-dev-server --config ./webpack.config.js --inline false",
+    "start": "NODE_ENV=development webpack-dev-server --open --config ./webpack.config.js",
     "clean": "rimraf build",
     "build": "NODE_ENV=production webpack -p --progress",
     "copy": "mkdirp build && cd lambda && copy ./*.{js,json} ../build && cd ..",
