Add a cool NASA image

--- a/app/assets/registry.yaml
+++ b/app/assets/registry.yaml
@@ -1,5 +1,7 @@
 images:
-  - file: alex-jodoin-246078.jpg
-    credit: Photo by Alex Jodoin on Unsplash
   - file: christophe-laurenceau-364504.jpg
     credit: Photo by Christophe Laurenceau on Unsplash
+  - file: alex-jodoin-246078.jpg
+    credit: Photo by Alex Jodoin on Unsplash
+  - file: nasa-45078.jpg
+    credit: Photo by NASA on Unsplash
