--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@cypress/webpack-preprocessor": "^4.0.3",
     "babel-loader": "^8.0.5",
     "copy": "^0.3.1",
     "cross-zip-cli": "^1.0.0",
     "css-loader": "^0.28.7",
-    "cypress": "^3.1.4",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
@@ -53,7 +51,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "next-tick": "^1.0.0",
-    "react": "^16.7.0",
+    "react": "16.9",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^6.0.0",
