--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "clean": "rimraf build",
     "build": "NODE_ENV=production webpack -p --progress",
     "copy": "mkdirp build && cd lambda && copy ./*.{js,json} ../build && cd ..",
-    "lambda-install": "cd build && yarn --production && cd ..",
+    "lambda-install": "cd build && npm i --production && cd ..",
     "zip": "cd build && rimraf app-package.zip && cross-zip ./ app-package.zip && cd ..",
     "terraform-init": "cd ./infrastructure/env-dev && terraform init -input=true -backend-config=./backend.tfvars",
     "terraform-plan": "cd ./infrastructure/env-dev && terraform get && terraform plan --var-file ./terraform.tfvars",
     "terraform-apply": "cd ./infrastructure/env-dev && terraform get && terraform apply --var-file ./terraform.tfvars",
-    "prepare-deploy": "yarn clean & yarn build && yarn copy && yarn lambda-install && yarn zip"
+    "prepare-deploy": "npm run clean & npm run build && npm run copy && npm run lambda-install && npm run zip"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -26,7 +26,7 @@
     "babel-loader": "^8.0.5",
     "copy": "^0.3.1",
     "cross-zip-cli": "^1.0.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^3.5.2",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
@@ -34,16 +34,16 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^3.0.1",
+    "file-loader": "^6.0.0",
     "js-yaml": "^3.10.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^4.5.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "mkdirp": "^1.0.4",
+    "node-sass": "^4.13.1",
     "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^8.0.2",
     "sass-resources-loader": "^2.0.0",
     "static-site-generator-webpack-plugin": "^3.4.2",
-    "style-loader": "^0.19.0",
+    "style-loader": "^1.1.4",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
@@ -52,10 +52,10 @@
     "classnames": "^2.2.6",
     "next-tick": "^1.0.0",
     "react": "16.9",
-    "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "slugify": "^1.3.4"
