Change greetings to randomize on client

--- a/app/assets/greeting.yaml
+++ b/app/assets/greeting.yaml
@@ -1,4 +1,51 @@
 greetings:
-  - Hello, hi, whatever
-  - Hello. Also, not hello
-  - It's nothing to meet you
+  - hi, whatever
+  - come the f*ck down from there
+  - congrats, or sorry that happened
+  - cruel world
+  - but also f*ck you
+  - stay away from my family
+  - goodbye, goodbye
+  - don't quote me I ain't said sh*t
+  - have you heard the good news
+  - darkness my old friend 🎵
+  - have you come to steal my eyes
+  - have some cake
+  - steal this website
+  - donde esta la biblioteca
+  - the world is on fire
+  - follow me on Nextdoor
+  - follow me on Venmo
+  - follow me on LinkedIn
+  - follow me on r/prisonhooch
+  - follow me on the Citizen app
+  - follow me on Zillow
+  - follow me on Hacker News
+  - follow me on Expensify
+  - follow me on your CRM
+  - mash that like and subscribe
+  - <dial-up noises>
+  - unfortunately
+  - the world is a vampire
+  - I work to live/die
+  - how long have you been here
+  - that's too bad
+  - tiny captain
+  - frenemy
+  - captains of industry and robber barons
+  - eat the rich
+  - OJ did it
+  - you deserve this
+  - I am the end of Interstellar
+  - my favorite movie is Titanic
+  - enjoy a malted beverage
+  - it's a shame
+  - avoid the noid
+  - why not try a different website
+  - my favorite band is Dave Matthews Band
+  - email me in five years
+  - <crashes through wall> OH YEAH
+  - are you still here
+  - as your lawyer I do not advise this
+  - In Camelot is the best Sopranos episode come at me
+  - from the other side 🎵
