--- a/app/assets/greeting.yaml
+++ b/app/assets/greeting.yaml
@@ -1,6 +1,12 @@
 greetings:
   - hi, whatever
   - come the f*ck down from there
+  - go the f*ck to sleep
+  - don't talk to my son
+  - you shouldn't be here
+  - it's right behind you
+  - it's so brave what you're doing right now
+  - is your refrigerator running
   - congrats, or sorry that happened
   - cruel world
   - but also f*ck you
@@ -23,6 +29,8 @@ greetings:
   - follow me on Hacker News
   - follow me on Expensify
   - follow me on your CRM
+  - follow me on Signal
+  - follow me on Glassdoor
   - mash that like and subscribe
   - <dial-up noises>
   - unfortunately
@@ -32,20 +40,40 @@ greetings:
   - that's too bad
   - tiny captain
   - frenemy
+  - mortal enemy
+  - nice to meet you, I'm history's greatest monster
+  - bottom dwellers such as oysters and sea stars
   - captains of industry and robber barons
   - eat the rich
+  - no thanks
+  - you beautiful tropical fish
+  - you sweet summer child
+  - you noble land mermaid
+  - you two-legged centaur
+  - devourer of worlds
+  - I like the third movie in the trilogy
+  - cancel this website
+  - how do I log out of Facebook
+  - the situation has deteriorated rapidly
+  - it's gotten worse
   - OJ did it
   - you deserve this
-  - I am the end of Interstellar
+  - tell my family I love them
+  - my favorite movie is the end of Interstellar
+  - my favorite movie is Cats the movie
   - my favorite movie is Titanic
+  - my favorite band is Dave Matthews Band
   - enjoy a malted beverage
   - it's a shame
   - avoid the noid
   - why not try a different website
-  - my favorite band is Dave Matthews Band
   - email me in five years
   - <crashes through wall> OH YEAH
-  - are you still here
+  - are you still there
+  - why are you still here
+  - shouldn't you be leaving
   - as your lawyer I do not advise this
   - In Camelot is the best Sopranos episode come at me
   - from the other side 🎵
+  - cats rule everything around me
+  - candyman candyman candyman candyman candyman
