Thought of some more greetings

--- a/app/assets/greeting.yaml
+++ b/app/assets/greeting.yaml
@@ -58,10 +58,10 @@ greetings:
   - it's gotten worse
   - OJ did it
   - you deserve this
-  - tell my family I love them
+  - tell my family we had a good run
   - my favorite movie is the end of Interstellar
+  - my favorite movie is the end of Titanic
   - my favorite movie is Cats the movie
-  - my favorite movie is Titanic
   - my favorite band is Dave Matthews Band
   - enjoy a malted beverage
   - it's a shame
@@ -77,3 +77,4 @@ greetings:
   - from the other side 🎵
   - cats rule everything around me
   - candyman candyman candyman candyman candyman
+  - <the sound of dire misfortune> whats updog
