--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^6.0.0",
-    "js-yaml": "^3.10.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mkdirp": "^1.0.4",
     "node-sass": "^4.13.1",
@@ -48,7 +47,8 @@
     "style-loader": "^1.1.4",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "yaml-loader": "^0.6.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
