--- a/.eslintrc
+++ b/.eslintrc
@@ -7,12 +7,7 @@
   "plugins": [
     "react"
   ],
-  "parserOptions": {
-    "ecmaVersion": 2017,
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
+  parser: "@babel/eslint-parser",
   "rules": {
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
