Few more greetings

--- a/app/assets/greeting.yaml
+++ b/app/assets/greeting.yaml
@@ -13,30 +13,26 @@ greetings:
   - stay away from my family
   - goodbye, goodbye
   - don't quote me I ain't said sh*t
-  - have you heard the good news
   - darkness my old friend 🎵
   - have you come to steal my eyes
-  - have some cake
+  - not to brag but I have multiple eyes
   - steal this website
   - donde esta la biblioteca
   - the world is on fire
   - follow me on Nextdoor
-  - follow me on Venmo
   - follow me on LinkedIn
   - follow me on r/prisonhooch
   - follow me on the Citizen app
   - follow me on Zillow
-  - follow me on Hacker News
   - follow me on Expensify
   - follow me on your CRM
-  - follow me on Signal
   - follow me on Glassdoor
+  - follow me on Peacock
+  - follow me from the center of the panopticon
   - mash that like and subscribe
-  - <dial-up noises>
   - unfortunately
-  - the world is a vampire
   - I work to live/die
-  - how long have you been here
+  - seriously how long have you been here
   - that's too bad
   - tiny captain
   - frenemy
@@ -44,18 +40,17 @@ greetings:
   - nice to meet you, I'm history's greatest monster
   - bottom dwellers such as oysters and sea stars
   - captains of industry and robber barons
+  - capitalistic vampires and horny satyrs
   - eat the rich
   - no thanks
   - you beautiful tropical fish
   - you sweet summer child
   - you noble land mermaid
   - you two-legged centaur
-  - devourer of worlds
+  - you look almost life-like
   - I like the third movie in the trilogy
   - cancel this website
   - how do I log out of Facebook
-  - the situation has deteriorated rapidly
-  - it's gotten worse
   - OJ did it
   - you deserve this
   - tell my family we had a good run
@@ -63,10 +58,10 @@ greetings:
   - my favorite movie is the end of Titanic
   - my favorite movie is Cats the movie
   - my favorite band is Dave Matthews Band
-  - enjoy a malted beverage
-  - it's a shame
+  - my favorite Nick Cage movie is Drive Hard
   - avoid the noid
   - why not try a different website
+  - leave and speak to no one about this
   - email me in five years
   - <crashes through wall> OH YEAH
   - are you still there
@@ -77,4 +72,7 @@ greetings:
   - from the other side 🎵
   - cats rule everything around me
   - candyman candyman candyman candyman candyman
-  - <the sound of dire misfortune> whats updog
+  - <the sound of dire misfortune> what's updog
+  - <the sound of shamanistic rituals> that's a shaman
+  - <the sound of your refrigerator running> ketchup
+  - <dial-up noises>
